[package]
name = "tracing-browser-subscriber"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = [ "Jeremy Wall <jeremy@marzhillstudios.com" ]
description = "A tracing subscriber for the browser and webassembly"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.tracing]
version = "0.1.35"
features = ["attributes"]

[dependencies.tracing-subscriber]
version = "0.3.1"
features = ["registry"]

[dependencies.wasm-bindgen]
version = "0.2.81"
